--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,36 +1,28 @@
 
 @import url('https://fonts.googleapis.com/css?family=Raleway');
-body{
-    background-image: url("src\app\login-page\Register.png");
+.right{
+    background-image: url("src\app\login-page\loginbg2.png");
     background-size:cover;
     background-size:100%; 
 }
-.Hello{
-    font-family: ROBOTO;
-    margin-left: 21cm;
-    color: aliceblue;
-    padding-top: 4cm;
-    font-size: medium;
-    text-align:center;
-    position: absolute;
-    
-}
+
 .p{
-    padding-left: 6px;
+    /* padding-left: 6px; */
     font-weight: lighter;
+    text-align: center;
 }
 .login{
-    padding-top: 3.5cm;
+    /* padding-top: 3.5cm; */
     font-family:'Raleway';
     font-weight: 700px;
     font-size:xx-large;
     color: #3ab19b;
 }
-.Login-div{
+/* .Login-div{
     position:relative;
     padding-left: 2cm;
     padding-bottom: 2cm;
-}
+} */
 .matcard{
     background-color: aliceblue;
 }
@@ -39,36 +31,67 @@ body{
     font-family: 'Raleway';
 }
 .my-form{
-    padding-left: 12ch;
-    padding-top: 5ch;
+    margin: 0 auto;
     min-width: 100px;
     max-width: 410px;
     width: 100%;
-    height: 25cm;
-    position: relative;
 
   }
   .my-card{
     border-radius: 0.5cm;
     background-color: white;
   } 
-  .title{
-    border-top-left-radius: 0.5cm;
-    border-top-right-radius: 0.5cm;
+  .left{
+    width: 50%;
+    height: 100vh;
+    display: flex;
+  align-items: center;
+  justify-content: center;
   }
+  .right{
+    width: 50%;
+    height: 100vh;
+    display: flex;
+  align-items: center;
+  justify-content: center;
+  }
+  .full{
+    display: flex;
+  }
+
   .full-width{
     width: 10cm;
   }
   .button1{
     background-color: #3ab19b;
-    color:#3ab19b;
-    margin-left: 0.3cm;
-    width: 9.9cm;
-    height: 1.5cm;
+    color:#fff;
+    margin: 0 auto;
+    width: 97%;
+    /* height: 1.5cm; */
   }
-  /* .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color:white;
-} */
+  div.form-field-container {
+    margin-bottom: 16px;
+  }
+  
+  /* Additional styles for welcome container */
+  .welcome-container {
+    text-align: center; /* Center the content vertically */
+    padding: 2rem;
+  }
+  
+  .welcome-container h1 {
+    /* font-size: 24px; */
+    color: #fff;
+    margin-bottom: 20px;
+    margin-top: 0%;
+  }
+  .welcome-container h2 {
+    margin-top: 10px;
+    font-size: 24px;
+    color: #fff;
+    margin: 0;
+    font-weight: lighter;
+  }
  
 
 
