--- a/src/app/register-resource/register-resource.component.html
+++ b/src/app/register-resource/register-resource.component.html
@@ -1,31 +1,62 @@
-<form [formGroup]="formData" (ngSubmit)="submitForm()">
-  <div>
-    <label for="name">Name:</label>
-    <input type="text" id="name" formControlName="name" required>
+<div class="full">
+  <div class="left">
+    <form [formGroup]="formData" (ngSubmit)="submitForm()">
+      <div>
+        <h2>Register Bro!</h2>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Name:</mat-label>
+            <input matInput type="text" formControlName="name" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Employee ID:</mat-label>
+            <input matInput type="text" formControlName="empId" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Email:</mat-label>
+            <input matInput type="email" formControlName="email" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Password:</mat-label>
+            <input matInput type="password" formControlName="password" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Primary Skill:</mat-label>
+            <input matInput type="text" formControlName="primarySkill" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Secondary Skill:</mat-label>
+            <input matInput type="text" formControlName="secondarySkill" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Preferred Role:</mat-label>
+            <mat-select formControlName="preferredRole" required>
+              <mat-option value="Technical">Technical</mat-option>
+              <mat-option value="Non-Technical">Non-Technical</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <button mat-raised-button color="primary" class="Button1" type="submit">Submit</button>
+      </div>
+    </form>
+
   </div>
-  <div>
-    <label for="empId">Employee ID:</label>
-    <input type="text" id="empId" formControlName="empId" required>
+  <div class="right">
+    <div class="welcome-container">
+      <h1>Welcome Dear</h1>
+      <h2>Get yourself registered with smart buddy</h2>
+    </div>
   </div>
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" id="email" formControlName="email" required>
-  </div>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" id="password" formControlName="password" required>
-  </div>
-  <div>
-    <label for="primarySkill">Primary Skill:</label>
-    <input type="text" id="primarySkill" formControlName="primarySkill" required>
-  </div>
-  <div>
-    <label for="secondarySkill">Secondary Skill:</label>
-    <input type="text" id="secondarySkill" formControlName="secondarySkill" required>
-  </div>
-  <div>
-    <label for="preferredRole">Preferred Role:</label>
-    <input type="text" id="preferredRole" formControlName="preferredRole" required>
-  </div>
-  <button type="submit">Submit</button>
-</form>
+</div>
