--- a/src/app/add-jds/add-jds.component.html
+++ b/src/app/add-jds/add-jds.component.html
@@ -1,62 +1,68 @@
 <body>
   <div class="full">
-  <div class="header">
-
-              <label id="appname" class="logo"><strong> Smart Buddy</strong></label>
-
-              <label id="pgname"><Strong>Supervisor</Strong></label>
-
-              <button id="logoutbtn" mat-raised-button class="logout">Logout</button>
-
-          </div>
-          <!-- new-component.component.html -->
-
-  <div class="body">
-
-
-  <div class="left">
-    <div class="heading">
-    <h1>Add JDS</h1>
-  </div>
-    <p>Title:</p>
-      <mat-form-field class="anything">
-      <mat-label>Title:</mat-label>
-      <input  style="margin-left: 2cm;" matInput name="title"formControlName="title" required><br>
-      </mat-form-field>
-      <p>Domain:</p>
-      <mat-form-field class="anything">
-        <mat-label>--select--</mat-label>
-        <mat-select >
-          <mat-option>Europe</mat-option>
-          <mat-option>NA</mat-option>
-          <mat-error >Please select an option</mat-error>
-        </mat-select>
-      </mat-form-field>
-
-      <br>
-
-      <div class="button-container">
-      <button color="primary" style= "width: 5cm;   font-family: ROBOTO;
-      color: aliceblue;" mat-raised-button class="button">Publish JD</button>
-      <button color="primary" style= "width: 5cm;   font-family: ROBOTO;
-      color: aliceblue;" mat-raised-button class="button">Save & Draft</button>
-      </div>
-
+    <div class="header">
+      <label id="appname" class="logo"><strong>Smart Buddy</strong></label>
+      <label id="pgname"><strong>Supervisor</strong></label>
+      <button id="logoutbtn" mat-raised-button class="logout">Logout</button>
     </div>
 
-  <div class="right">
-    <div style="margin-left: 3cm; margin-top: 2cm;">
-    <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-    color: aliceblue;" mat-raised-button class="button">JDS</button><br>
-    <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-    color: aliceblue;" mat-raised-button class="button">Add Resources</button>
-    <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-    color: aliceblue;" mat-raised-button class="button">View All Resources</button>
-    <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-    color: aliceblue;" mat-raised-button class="button">Remove Resources</button>
-  </div>
-  </div>
+    <div class="body">
+      <div class="left">
+        <div class="heading">
+          <h1>Add JDS</h1>
+        </div>
+        <form [class.edit-mode]="isEditMode" [formGroup]="formData" (ngSubmit)="submitForm()">
+          <mat-form-field class="anything">
+            <mat-label>Title</mat-label>
+            <input matInput formControlName="Title" [disabled]="!isEditMode" required>
+          </mat-form-field>
+  
+          <mat-form-field class="anything">
+            <mat-label>Account</mat-label>
+            <input matInput formControlName="Account" [disabled]="!isEditMode" required>
+          </mat-form-field>
+  
+          <mat-form-field class="anything">
+            <mat-label>Domain</mat-label>
+            <input matInput formControlName="Domain" [disabled]="!isEditMode" required>
+          </mat-form-field>
+  
+          <mat-form-field class="anything">
+            <mat-label>Description</mat-label>
+            <input matInput formControlName="Description" [disabled]="!isEditMode" required>
+          </mat-form-field>
+  
+          <div class="button-container">
+            <button mat-raised-button class="button" color="primary" style="width: 5cm;">
+              Publish JD
+            </button>
 
+            <button mat-raised-button color="primary" class="edit-button button1" style="width: 5cm;" (click)="toggleEditMode()">
+              <mat-label>{{ isEditMode ? 'Save Draft' : 'Edit' }}</mat-label>
+            </button>
+          </div>
+        </form>
+      </div>
+
+      <div class="right">
+        <div style="margin-left: 3cm; margin-top: 2cm;">
+          <button mat-raised-button class="button" color="primary" style="width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;">
+            JDS
+          </button><br>
+
+          <button mat-raised-button class="button" color="primary" style="width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;">
+            Add Resources
+          </button><br>
+
+          <button mat-raised-button class="button" color="primary" style="width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;">
+            View All Resources
+          </button><br>
+
+          <button mat-raised-button class="button" color="primary" style="width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;">
+            Remove Resources
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
-  </body>
+</body>
