--- a/src/app/rmg-home/rmg-home.component.html
+++ b/src/app/rmg-home/rmg-home.component.html
@@ -1,1 +1,135 @@
-<p>rmg-home works bro!</p>
+<div class="full">
+    <div class="header">
+        <label id="appname"><strong> Smart Buddy</strong></label>
+
+        <label id="pgname"><Strong>Supervisor</Strong></label>
+
+        <button id="logoutbtn" mat-raised-button class="logout">Logout</button>
+    </div>
+  </div>
+  
+  <div class="grid-container">
+    <div class="left">
+        <div class="table">
+
+ 
+
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            
+             
+            
+                <!--- Note that these columns can be defined in any order.
+            
+                      The actual rendered columns are set as a property on the row definition" -->
+            
+             
+            
+                <!-- Position Column -->
+            
+                <!-- <ng-container matColumnDef="position">
+            
+                  <th mat-header-cell *matHeaderCellDef> No. </th>
+            
+                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            
+                </ng-container> -->
+            
+             
+            
+                <!-- Name Column -->
+            
+                <ng-container matColumnDef="name">
+            
+                  <th mat-header-cell *matHeaderCellDef style="text-align: center;"> JDS </th>
+            
+                  <td mat-cell *matCellDef="let element"> {{element.name}} <i class="bi bi-eye-fill"></i>
+            
+                    <!-- <div class="makecornor">
+            
+                      <i class="bi bi-archive-fill"></i> <mat-icon>visibility</mat-icon>
+            
+                    <mat-icon>description</mat-icon>
+            
+                     <mat-icon>delete</mat-icon>  
+            
+                    </div> -->
+            
+             
+            
+                    <div class="icon-container">
+            
+                      <i class="bi bi-eye-fill"></i>
+            
+                      <i class="bi bi-archive-fill"></i>
+            
+                      <mat-icon>visibility</mat-icon>
+            
+                      <mat-icon>description</mat-icon>
+            
+                      <mat-icon>delete</mat-icon>
+            
+                    </div>
+            
+             
+            
+             
+            
+                  </td>
+            
+                </ng-container>
+            
+                <!-- <ng-container matColumnDef="expand">
+            
+                  <th mat-header-cell *matHeaderCellDef aria-label="row actions" style="background-color: #54C1AC">&nbsp;</th>
+            
+                  <td mat-cell *matCellDef="let element" style="display: flex;">
+            
+                  <div class="icon-container">
+            
+                    <i class="bi bi-eye-fill"></i>
+            
+                    <i class="bi bi-archive-fill"></i> -->
+            
+                     <!-- <button mat-icon-button style="margin-right: 5rem; margin-top: 0.2rem" aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()"></button> -->
+            
+                    <!-- <mat-icon *ngIf="expandedElement !== element">visibility</mat-icon>
+            
+                    <mat-icon *ngIf="expandedElement !== element">description</mat-icon>
+            
+                    <mat-icon *ngIf="expandedElement !== element">delete</mat-icon>
+            
+                  </div>
+            
+                </td>
+            
+                </ng-container>  -->
+            
+             
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            
+              </table>
+            
+              </div>  
+    </div>  
+  
+    <div class="right">
+      <div class="button-container">
+        <button mat-raised-button class="button" color="primary">
+          JDS
+        </button>
+        <button mat-raised-button class="button" color="primary">
+          Add Resources
+        </button>
+        <button mat-raised-button class="button" color="primary">
+          View All Resources
+        </button>
+        <button mat-raised-button class="button" color="primary">
+          Remove Resources
+        </button>
+      </div>
+    </div>
+  </div>
+  
