--- a/src/app/rmg-home/rmg-home.component.html
+++ b/src/app/rmg-home/rmg-home.component.html
@@ -1,135 +1,75 @@
 <div class="full">
-    <div class="header">
-        <label id="appname"><strong> Smart Buddy</strong></label>
-
-        <label id="pgname"><Strong>Supervisor</Strong></label>
-
-        <button id="logoutbtn" mat-raised-button class="logout">Logout</button>
-    </div>
+  <div class="fst header">
+    <label id="appname"><img src="smart-logo.png"></label>
+    <label id="pgname" style=" font-size: 25px;"><Strong>Supervisor</Strong></label>
+    <button id="logoutbtn" (click)="logout()" mat-raised-button style="margin-right: 1cm;">Logout</button>
   </div>
-  
-  <div class="grid-container">
-    <div class="left">
-        <div class="table">
+</div>
 
- 
-
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            
-             
-            
-                <!--- Note that these columns can be defined in any order.
-            
-                      The actual rendered columns are set as a property on the row definition" -->
-            
-             
-            
-                <!-- Position Column -->
-            
-                <!-- <ng-container matColumnDef="position">
-            
-                  <th mat-header-cell *matHeaderCellDef> No. </th>
-            
-                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            
-                </ng-container> -->
-            
-             
-            
-                <!-- Name Column -->
-            
-                <ng-container matColumnDef="name">
-            
-                  <th mat-header-cell *matHeaderCellDef style="text-align: center;"> JDS </th>
-            
-                  <td mat-cell *matCellDef="let element"> {{element.name}} <i class="bi bi-eye-fill"></i>
-            
-                    <!-- <div class="makecornor">
-            
-                      <i class="bi bi-archive-fill"></i> <mat-icon>visibility</mat-icon>
-            
-                    <mat-icon>description</mat-icon>
-            
-                     <mat-icon>delete</mat-icon>  
-            
-                    </div> -->
-            
-             
-            
-                    <div class="icon-container">
-            
-                      <i class="bi bi-eye-fill"></i>
-            
-                      <i class="bi bi-archive-fill"></i>
-            
-                      <mat-icon>visibility</mat-icon>
-            
-                      <mat-icon>description</mat-icon>
-            
-                      <mat-icon>delete</mat-icon>
-            
-                    </div>
-            
-             
-            
-             
-            
-                  </td>
-            
-                </ng-container>
-            
-                <!-- <ng-container matColumnDef="expand">
-            
-                  <th mat-header-cell *matHeaderCellDef aria-label="row actions" style="background-color: #54C1AC">&nbsp;</th>
-            
-                  <td mat-cell *matCellDef="let element" style="display: flex;">
-            
-                  <div class="icon-container">
-            
-                    <i class="bi bi-eye-fill"></i>
-            
-                    <i class="bi bi-archive-fill"></i> -->
-            
-                     <!-- <button mat-icon-button style="margin-right: 5rem; margin-top: 0.2rem" aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()"></button> -->
-            
-                    <!-- <mat-icon *ngIf="expandedElement !== element">visibility</mat-icon>
-            
-                    <mat-icon *ngIf="expandedElement !== element">description</mat-icon>
-            
-                    <mat-icon *ngIf="expandedElement !== element">delete</mat-icon>
-            
-                  </div>
-            
-                </td>
-            
-                </ng-container>  -->
-            
-             
-            
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            
-              </table>
-            
-              </div>  
-    </div>  
-  
-    <div class="right">
-      <div class="button-container">
-        <button mat-raised-button class="button" color="primary">
-          JDS
-        </button>
-        <button mat-raised-button class="button" color="primary">
-          Add Resources
-        </button>
-        <button mat-raised-button class="button" color="primary">
-          View All Resources
-        </button>
-        <button mat-raised-button class="button" color="primary">
-          Remove Resources
-        </button>
+<div class="grid-container">
+  <div class="left">
+    <div class="table">
+      <div class="heading">
+        <h1>JOB DESCRIPTION</h1>
       </div>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="JID">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Job ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} <i class="bi bi-eye-fill"></i>          </td>
+          </ng-container>
+        <ng-container matColumnDef="Title">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Title </th>
+          <td mat-cell *matCellDef="let element"> {{element.Title}} <i class="bi bi-eye-fill"></i>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="Account">
+        <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Account </th>
+        <td mat-cell *matCellDef="let element"> {{element.Account}} <i class="bi bi-eye-fill"></i>
+          
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Domain">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Domain </th>
+          <td mat-cell *matCellDef="let element"> {{element.Domain}} <i class="bi bi-eye-fill"></i>
+             
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="Description">
+        <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Description </th>
+          <td mat-cell *matCellDef="let element"> {{element.Description}} <i class="bi bi-eye-fill"></i>          </td>
+        </ng-container>
+        <ng-container matColumnDef="icos">
+          <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Action </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="icon-container">
+              <i class="bi bi-eye-fill"></i>
+              <i class="bi bi-archive-fill"></i>
+              <mat-icon style="cursor: pointer;" (click)="del(element.id)">delete</mat-icon>
+            </div>
+          </td>
+        </ng-container>
+        
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
   </div>
-  
+
+  <div class="right">
+    <div class="button-container">
+      <button mat-raised-button class="button" (click)="addJDS()" color="primary">
+        Add JDS
+      </button>
+      <button mat-raised-button class="button" color="primary">
+        Add Resources
+      </button>
+      <button mat-raised-button class="button" (click)="viewRes()" color="primary">
+        View All Resources
+      </button>
+      <button mat-raised-button class="button" color="primary">
+        Remove Resources
+      </button> 
+    </div>
+  </div>
+
+</div>
