--- a/src/app/add-resource/add-resource.component.css
+++ b/src/app/add-resource/add-resource.component.css
@@ -104,4 +104,15 @@
     font-size: 1.2rem;
     color: #333;
   }
-  
+  mat-form-field{
+    /* background-color: red; */
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Button1{
+    width: 80%;
+  }
