--- a/src/app/view-all-resources/view-all-resources.component.css
+++ b/src/app/view-all-resources/view-all-resources.component.css
@@ -1,101 +1,131 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
-.header {
+.full2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+.full {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+.fst {
   background-color: #54C1AC;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 1.5cm;
-  font-family: ROBOTO;
-  color: aliceblue;
-  font-size: 22px;
+  height: 2cm;
 }
-.header img {
-  height: 50px; /* Adjust the height to fit your logo size */
+
+#appname {
+  color: white;
+  font-family: ROBOTO;
+}
+
+#pgname {
+  text-align: center;
+  font-family: ROBOTO;
+  flex-grow: 1;
+  font-size:larger;
+}
+
+#logoutbtn {
+  float: right;
   margin-right: 20px;
-}
-.logo{
-  margin-left: 1cm;
-}
-.logout{
-  margin-right: 1cm;
+  /* color: #54C1AC; */
 }
 
-.left {
-  margin-top: 3cm;
-
-  background-color: white;
-
-  width: 40%;
-
-  justify-content: center;
-
-  align-items: left;
-
+.header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 10px 20px;
+  /* background-color: #fff; */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-  flex-direction: column;
+.logout{
 
-  float: left;
-  margin-left: 3cm;
+  margin-right: 1cm;
 
 }
 
-.heading{
-  background-color: #3ab19b;
-  font-family: ROBOTO;
-  color: rgb(248, 248, 248);
-  border-radius: 0.1cm;
-  font-size: 12px;
-width: fit-content;
-padding-left: 30px;
-padding-right: 30px;
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  gap: 20px;
+  margin-top: 20px;
+  
+}
+
+.table {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;  
+}
+.table  button{
+  /* color: red;/ */
+  display: flex;
+  width: 50%;
+  flex-direction: row;
+}
+
+.button-container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .right {
-
-  width: 50%;
-
-  justify-content: center;
-
-  align-items: center;
-
   display: flex;
-
-  height: 600px;
-
-}
-.anything{
-  width: 10cm;
-
-}
-
-/* table-component.component.css */
-.table {
-  margin-top: 2cm;
-  border-collapse: collapse;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
   width: 100%;
+  /* padding: 20px; */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.table th, .table td {
-  border: 1px solid #ddd;
-  padding: 8px;
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
 }
 
-.table th {
-  background-color: #f2f2f2;
+.button {
+  width: 100%;
+  height: 40px;
+  font-family: 'Roboto', sans-serif;
+  color: aliceblue;
+  
+}
+mat-form-field{
+  /* background-color: red; */
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
 }
 
-.table tr:nth-child(even) {
-  background-color: #f2f2f2;
+/* Add any additional styling for icons as needed */
+.icon-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  color: #333;
 }
-
-/* #appname {
-  background-image: url("C:\Users\jasmishr\Desktop\SmartBuddy\SmartBuddy\src\assets\smart logo.png");
-  } */
-  mat-header-row{
-    width: max-content;
-  }
-  mat-cell{
-    width: max-content;
-  }
