--- a/src/app/add-jds/add-jds.component.html
+++ b/src/app/add-jds/add-jds.component.html
@@ -51,7 +51,7 @@
       <button mat-raised-button class="button" (click)="home()" color="primary">
         Home
       </button>
-      <button mat-raised-button class="button" color="primary">
+      <button mat-raised-button class="button" (click)="addResources()" color="primary">
         Add Resources
       </button>
       <button mat-raised-button class="button" (click)="viewResources()" color="primary">
