--- a/src/app/rmg-home/rmg-home.component.html
+++ b/src/app/rmg-home/rmg-home.component.html
@@ -60,13 +60,13 @@
       <button mat-raised-button class="button" (click)="addJDS()" color="primary">
         Add JDS
       </button>
-      <button mat-raised-button class="button" color="primary">
+      <button mat-raised-button class="button" (click)="addResources()" color="primary">
         Add Resources
       </button>
       <button mat-raised-button class="button" (click)="viewRes()" color="primary">
         View All Resources
       </button>
-      <button mat-raised-button class="button" color="primary">
+      <button mat-raised-button class="button" (click)="removeResources()" color="primary">
         Remove Resources
       </button> 
     </div>
