--- a/src/app/add-jds/add-jds.component.html
+++ b/src/app/add-jds/add-jds.component.html
@@ -59,7 +59,10 @@
       </button>
       <button mat-raised-button class="button" color="primary">
         Remove Resources
-      </button> 
+      </button>
+      <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
+        View Nominations
+      </button>  
     </div>
   </div>
 
