--- a/src/app/add-resource/add-resource.component.html
+++ b/src/app/add-resource/add-resource.component.html
@@ -67,17 +67,20 @@
   
     <div class="right">
       <div class="button-container">
-        <button mat-raised-button class="button" (click)="addjds()"  color="primary">
-          Add JDS
-        </button>
         <button mat-raised-button class="button" (click)="home()" color="primary">
           Home
+        </button>
+        <button mat-raised-button class="button" (click)="addjds()"  color="primary">
+          Add JDS
         </button>
         <button mat-raised-button class="button" (click)="viewRes()" color="primary">
           View All Resources
         </button>
         <button mat-raised-button class="button" color="primary">
           Remove Resources
+        </button>
+        <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
+          View Nominations
         </button> 
       </div>
     </div>
