--- a/src/app/rmg-home/rmg-home.component.html
+++ b/src/app/rmg-home/rmg-home.component.html
@@ -68,6 +68,9 @@
       </button>
       <button mat-raised-button class="button" (click)="removeResources()" color="primary">
         Remove Resources
+      </button>
+      <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
+        View Nominations
       </button> 
     </div>
   </div>
