--- a/src/app/view-all-resources/view-all-resources.component.html
+++ b/src/app/view-all-resources/view-all-resources.component.html
@@ -52,7 +52,7 @@
         <button mat-raised-button class="button" (click)="jds()" color="primary">
           View JDS
         </button>
-        <button mat-raised-button class="button" color="primary">
+        <button mat-raised-button class="button" (click)="addres()" color="primary">
           Add Resources
         </button>
         <button mat-raised-button class="button" (click)="addjds()" color="primary">
@@ -60,6 +60,9 @@
         </button>
         <button mat-raised-button class="button" color="primary">
           Remove Resources
+        </button>
+        <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
+          View Nominations
         </button> 
       </div>
     </div>
