--- a/src/app/add-resource/add-resource.component.css
+++ b/src/app/add-resource/add-resource.component.css
@@ -93,7 +93,7 @@
     width: 100%;
     height: 40px;
     font-family: 'Roboto', sans-serif;
-    color: aliceblue;
+    /* color: aliceblue; */
   }
   
   /* Add any additional styling for icons as needed */
