--- a/src/app/nominations/nominations.component.css
+++ b/src/app/nominations/nominations.component.css
@@ -109,7 +109,7 @@
   width: 100%;
   height: 40px;
   font-family: 'Roboto', sans-serif;
-  color: aliceblue;
+  /* color: aliceblue; */
   
 }
 mat-form-field{
@@ -128,4 +128,20 @@ mat-form-field{
   gap: 10px;
   font-size: 1.2rem;
   color: #333;
+}
+.search{
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80% ;
+  margin-bottom: 10px;
+}
+
+.search input{
+  width: 100% ;
+}
+.search button{
+  margin-left: 15px ;
+  background-color: #54C1AC;
 }
