--- a/src/app/view-all-resources/view-all-resources.component.css
+++ b/src/app/view-all-resources/view-all-resources.component.css
@@ -109,7 +109,7 @@
   width: 100%;
   height: 40px;
   font-family: 'Roboto', sans-serif;
-  color: aliceblue;
+  /* color: aliceblue; */
   
 }
 mat-form-field{
