--- a/src/app/remove-resources/remove-resources.component.html
+++ b/src/app/remove-resources/remove-resources.component.html
@@ -31,13 +31,14 @@
 <div class="right">
   <div style="margin-left: 3cm; margin-top: 2cm;">
   <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-  color: aliceblue;" mat-raised-button class="button">JDS</button><br>
+  color: aliceblue;" mat-raised-button class="button" (click)="home()">JDS</button><br>
   <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-  color: aliceblue;" mat-raised-button class="button">Add Resources</button>
+  color: aliceblue;" mat-raised-button class="button" (click)="addResources()">Add Resources</button>
   <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-  color: aliceblue;" mat-raised-button class="button">View All Resources</button>
+  color: aliceblue;" mat-raised-button class="button" (click)="viewResources()">View All Resources</button>
   <button color="primary" style= "width: 10cm; height: 1.3cm; margin-bottom: 0.6cm;   font-family: ROBOTO;
-  color: aliceblue;" mat-raised-button class="button">Add JDS</button>
+  color: aliceblue;" mat-raised-button class="button" (click)="addjds()">Add JDS</button>
+
 </div>
 </div>
 
