--- a/src/app/remove-resources/remove-resources.component.html
+++ b/src/app/remove-resources/remove-resources.component.html
@@ -6,7 +6,8 @@
 
             <label id="pgname"><Strong>Supervisor</Strong></label>
 
-            <button id="logoutbtn" mat-raised-button class="logout">Logout</button>
+
+            <button id="logoutbtn" (click)="logout()" mat-raised-button style="margin-right: 1cm;" >Logout</button>
 
         </div>
         <!-- new-component.component.html -->
