--- a/src/app/rmg-home/rmg-home.component.html
+++ b/src/app/rmg-home/rmg-home.component.html
@@ -25,13 +25,13 @@
         <ng-container matColumnDef="Account">
         <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Account </th>
         <td mat-cell *matCellDef="let element"> {{element.Account}} <i class="bi bi-eye-fill"></i>
-          
+
         </td>
       </ng-container>
       <ng-container matColumnDef="Domain">
       <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Domain </th>
           <td mat-cell *matCellDef="let element"> {{element.Domain}} <i class="bi bi-eye-fill"></i>
-             
+
           </td>
         </ng-container>
         <ng-container matColumnDef="Description">
@@ -48,7 +48,7 @@
             </div>
           </td>
         </ng-container>
-        
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
@@ -66,12 +66,12 @@
       <button mat-raised-button class="button" (click)="viewRes()" color="primary">
         View All Resources
       </button>
-      <button mat-raised-button class="button" (click)="removeResources()" color="primary">
+      <button mat-raised-button class="button" (click)="removeResource()" color="primary">
         Remove Resources
       </button>
       <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
         View Nominations
-      </button> 
+      </button>
     </div>
   </div>
 
