--- a/src/app/remove-resources/remove-resources.component.css
+++ b/src/app/remove-resources/remove-resources.component.css
@@ -7,8 +7,8 @@
   height: 1.5cm;
   font-family: ROBOTO;
   /* color: aliceblue; */
-  font-size: 22px;
-}
+  /* font-size: 22px;
+} */
 .logo{
   margin-left: 1cm;
 }
