--- a/src/app/remove-resources/remove-resources.component.css
+++ b/src/app/remove-resources/remove-resources.component.css
@@ -9,6 +9,15 @@
   /* color: aliceblue; */
   /* font-size: 22px;
 } */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 10px 20px;
+  /* background-color: #fff; */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
 .logo{
   margin-left: 1cm;
 }
