--- a/src/app/remove-resources/remove-resources.component.html
+++ b/src/app/remove-resources/remove-resources.component.html
@@ -1,16 +1,11 @@
-<body>
-<div class="full">
-<div class="header">
 
-            <label id="appname" class="logo"><strong> Smart Buddy</strong></label>
-
-            <label id="pgname"><Strong>Supervisor</Strong></label>
-
-
-            <button id="logoutbtn" (click)="logout()" mat-raised-button style="margin-right: 1cm;" >Logout</button>
-
-        </div>
-        <!-- new-component.component.html -->
+  <div class="full">
+    <div class="fst header">
+      <label id="appname"><img src="smart-logo.png"></label>
+      <label id="pgname" style=" font-size: 25px;"><Strong>Supervisor</Strong></label>
+      <button id="logoutbtn" (click)="logout()" mat-raised-button style="margin-right: 1cm;">Logout</button>
+    </div>
+  </div>
 
 <div class="body">
 
@@ -44,5 +39,4 @@
 </div>
 
 </div>
-</div>
-</body>
+
