--- a/src/app/remove-resources/remove-resources.component.css
+++ b/src/app/remove-resources/remove-resources.component.css
@@ -9,14 +9,14 @@
   /* color: aliceblue; */
   /* font-size: 22px;
 } */
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 10px 20px;
+  padding: 10px 20px; */
   /* background-color: #fff; */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 .logo{
   margin-left: 1cm;
@@ -26,11 +26,11 @@
 }
 
 .left {
-  margin-top: 6cm;
+  margin-top: 6cm; */
 
   /* background-color: white; */
 
-  width: 40%;
+  /* width: 40%;
 
   justify-content: center;
 
@@ -49,7 +49,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 10px 20px;
+  padding: 10px 20px; */
   /* background-color: #fff; */
   /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -58,15 +58,15 @@
   background-color: #3ab19b;
   font-family: ROBOTO;
   /* color: rgb(248, 248, 248); */
-  border-radius: 0.1cm;
+  /* border-radius: 0.1cm;
   font-size: 12px;
 width: fit-content;
 padding-left: 30px;
 padding-right: 30px;
 
-}
+} */
 
-.right {
+/* .right {
 
   width: 50%;
 
@@ -78,14 +78,72 @@ padding-right: 30px;
 
   height: 600px;
 
-}
-.anything{
+} */
+/* .anything{
   width: 10cm;
 
-}
- */
+} */
 
- .full {
+
+ /* .full {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+.fst {
+  background-color: #54C1AC;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2cm;
+} */
+
+/* #appname {
+  color: white;
+  font-family: ROBOTO;
+}
+
+#pgname {
+  text-align: center;
+  font-family: ROBOTO;
+  flex-grow: 1;
+  font-size:larger;
+}
+
+#logoutbtn {
+  float: right;
+  margin-right: 20px; */
+  /* color: #54C1AC; */
+/* }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 10px 20px; */
+  /* background-color: #fff; */
+  /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
+
+.logout{
+
+  margin-right: 1cm;
+
+} */
+
+
+.full {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,3 +200,64 @@ padding-right: 30px;
 
 }
 
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+  gap: 20px;
+  margin-top: 20px;
+
+}
+
+.table {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  /* padding: 20px; */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+}
+
+.button {
+  width: 100%;
+  height: 40px;
+  font-family: 'Roboto', sans-serif;
+  /* color: aliceblue; */
+}
+
+/* Add any additional styling for icons as needed */
+.icon-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.2rem;
+  color: #333;
+}
+mat-form-field{
+  /* background-color: red; */
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.Button1{
+  width: 80%;
+}
