--- a/src/app/remove-resources/remove-resources.component.html
+++ b/src/app/remove-resources/remove-resources.component.html
@@ -1,4 +1,4 @@
-
+<!--
   <div class="full">
     <div class="fst header">
       <label id="appname"><img src="smart-logo.png"></label>
@@ -39,4 +39,72 @@
 </div>
 
 </div>
+ -->
+
+ <div class="full">
+  <div class="fst header">
+    <label id="appname"><img src="smart-logo.png"></label>
+    <label id="pgname" style=" font-size: 25px;"><Strong>Supervisor</Strong></label>
+    <button id="logoutbtn"  mat-raised-button style="margin-right: 1cm;" (click)="logout()">Logout</button>
+  </div>
+</div>
+
+<div class="grid-container">
+  <div class="left">
+    <div class="table">
+      <div class="heading">
+        <h1>Remove Resource</h1>
+      </div>
+      <p>Enter Employee Id:</p>
+    <mat-form-field class="anything">
+
+    <mat-label>Enter Employee Id:</mat-label>
+    <input  style="margin-left: 2cm;" #yourInput matInput name="id" formControlName="id" required><br>
+    </mat-form-field>
+    <button color="primary" style= "width: 10cm;   font-family: ROBOTO;
+    color: aliceblue;" mat-raised-button class="button" (click)="del(yourInput.value)">Remove</button>
+  </div>
+  </div>
+
+
+<!-- <div class="grid-container">
+  <div class="left">
+    <div class="heading">
+      <h1>Remove Resource</h1>
+
+        <p>Enter Employee Id:</p>
+    <mat-form-field class="anything">
+
+    <mat-label>Enter Employee Id:</mat-label>
+    <input  style="margin-left: 2cm;" #yourInput matInput name="id" formControlName="id" required><br>
+    </mat-form-field>
+    <button color="primary" style= "width: 10cm;   font-family: ROBOTO;
+    color: aliceblue;" mat-raised-button class="button" (click)="del(yourInput.value)">Remove</button>
+  </div>
+  </div> -->
+
+
+
+  <div class="right">
+    <div class="button-container">
+      <button mat-raised-button class="button" (click)="jds()" color="primary">
+        Home
+      </button>
+      <button mat-raised-button class="button" (click)="addjds()"  color="primary">
+        Add JDS
+      </button>
+      <button mat-raised-button class="button" (click)="viewResources()" color="primary">
+        View All Resources
+      </button>
+      <button mat-raised-button class="button" (click)="addResource()" color="primary">
+        Add Resources
+      </button>
+
+      <button mat-raised-button class="button" (click)="viewNomination()" color="primary">
+        View Nominations
+      </button>
+    </div>
+  </div>
+
+
 
