--- a/src/app/resource-home/resource-home.component.html
+++ b/src/app/resource-home/resource-home.component.html
@@ -1,17 +1,17 @@
 <body>
     <div class="full">
-        <div class="fst">
-            <label id="appname"><strong> Smart Buddy</strong></label>
-            <label id="pgname"><Strong>Employee</Strong></label>
-            <button id="logoutbtn" (click)="logout()" mat-raised-button >Logout</button>
-        </div>
+      <div class="fst">
+        <label id="appname"><img src="smart-logo.png" ></label>
+      <label id="pgname" style=" font-size: 25px;"><Strong>Employee</Strong></label>
+      <button id="logoutbtn" mat-raised-button (click)="logout()" style="margin-right: 1cm;" >Logout</button>
+      </div>
         <div class="second">
             <div class="left">
                 <button class="quarter top-right" mat-raised-button color="primary" id="left-btn1" (click)="jobDesc()"><strong>JD</strong></button>
                 <button class="quarter bottom-right" mat-raised-button color = "primary"id="left-btn2" (click)="empdash()"><strong>Dashboard</strong></button>
             </div>
             <div class="right">
-               
+
             </div>
         </div>
     </div>
