--- a/src/app/resource-home/resource-home.component.css
+++ b/src/app/resource-home/resource-home.component.css
@@ -12,7 +12,7 @@
 .button2{
     display: flex;
     flex-direction: column;
-    
+
 }
 h1{
     width: fit-content;
@@ -28,7 +28,7 @@ h1{
 .right{
     background-image: url("/src/app/resource-home/images.png");
     background-size:cover;
-    background-size:100%; 
+    background-size:100%;
     background-color: blueviolet;
     width: 60%;
     float: right
@@ -37,34 +37,34 @@ body {
     background-color: aqua;
     padding: 0;
   }
-  
+
   .fst {
     background-color: aquamarine;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   #appname {
     color: blue;
   }
-  
+
   #pgname {
     text-align: center;
     color: red;
     flex-grow: 1;
   }
-  
+
   #logoutbtn {
     float: right;
   }
-  
+
   .second {
     background-color: antiquewhite;
     display: flex;
     flex-grow: 1;
   }
-  
+
   .left {
     background-color: blue;
     width: 40%;
@@ -74,7 +74,7 @@ body {
     flex-direction: column;
     float: left;
   }
-  
+
   .right {
     background-color: blueviolet;
     width: 60%;
@@ -84,7 +84,7 @@ body {
     height: 400px;
     background-image: url("/src/app/resource-home/images.png");
   }
-  
+
   .full {
     background-color: yellow;
     margin: 0;
@@ -92,21 +92,21 @@ body {
   #left-btn1,
   #left-btn2 {
     margin-right: auto;
-    
+
   }
-  
+
   .quarter {
     width: 30%;
     height: 100px;
 
   }
-  
+
   .top-right {
     border-top-right-radius: 200px;
     background: #1ba8e0;
     float: right
   }
-  
+
   .bottom-right {
     border-bottom-right-radius: 200px;
     background: #de232c;
@@ -118,7 +118,7 @@ body {
     background-color: white;
     padding: 0;
   }
-  
+
   .fst {
     background-color: #54C1AC;
     display: flex;
@@ -126,31 +126,43 @@ body {
     align-items: center;
     height: 2cm;
   }
-  
+
   #appname {
     color: white;
     font-family: ROBOTO;
   }
-  
+
   #pgname {
     text-align: center;
     font-family: ROBOTO;
     flex-grow: 1;
     font-size:larger;
   }
-  
+  .appname{
+    background-image: url('src/app/job-description/smart-logo.png');
+    margin-left: 5cm;
+    /* src: url('src/app/job-description/smart-logo.png'); */
+  }
+  .fst {
+    background-color: #54C1AC;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 2cm;
+  }
+
   #logoutbtn {
     float: right;
     margin-right: 20px;
-    
+
   }
-  
+
   .second {
     background-color: antiquewhite;
     display: flex;
     flex-grow: 1;
   }
-  
+
   .left {
     background-color: white;
     width: 30%;
@@ -160,7 +172,7 @@ body {
     flex-direction: column;
     float: left;
   }
-  
+
   .right {
     background-image: url("src\app\resource-home\images.png");
     width: 70%;
@@ -169,7 +181,7 @@ body {
     display: flex;
     height: 600px;
   }
-  
+
   .full {
     margin: 0;
   }
@@ -177,27 +189,26 @@ body {
     content: url('src\app\resource-home\images.png');
     max-width: 100%;
     max-height: 100%;
-  
+
   }
   #left-btn1,
   #left-btn2 {
     margin-right: auto;
     font-size: large;
   }
-  
+
   .quarter {
     width: 40%;
     height: 120px;
     /* justify-content: center; */
   }
-  
+
   .top-right {
     border-top-right-radius: 200px;
     float: right
   }
-  
+
   .bottom-right {
     border-bottom-right-radius: 200px;
     float: right
   }
-  
